--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
         <h1>Create Your Project</h1>
     </div>
-    <main id="project-container">
+    <main id="main-container">
       
       
 
