--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-        <form class="add-toy-form">
+        <form class="add-project-form">
           <h3>Create a project!</h3>
   
           <input
@@ -52,7 +52,7 @@
       </div>
 
       <div class="container">
-        <form class="add-toy-form">
+        <form class="add-task-form">
           <h3>Add task to your project!</h3>
   
           <input
