--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               type="text"
               name="name"
               value=""
-              placeholder="Project's name..."
+              placeholder="Project's name"
               class="input-text"
             />
             
@@ -63,7 +63,7 @@
               type="text"
               name="image"
               value=""
-              placeholder="Time required..."
+              placeholder="Time required(In Mins)"
               class="input-text"
             />
             
@@ -72,7 +72,7 @@
               type="text"
               name="image"
               value=""
-              placeholder="Imprtance out of 10"
+              placeholder="Importance 1-10"
               class="input-text"
             />
   
